part3/3.02/mainapp_backend_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: todobackend-svc
  namespace: project
spec:
  type: NodePort
  selector:
    app: todobackend
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todobackend-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todobackend
  template:
    metadata:
      labels:
        app: todobackend
    spec:
      containers:
        - name: todobackend
          image: markokoskinen2019/dwk-todobackend:v16
        - name: cloud-sql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.17
          command:
            - "/cloud_sql_proxy"
            - "-instances=dwk-gke-310715:europe-north1:project-db=tcp:5432"
            - "-credential_file=/secrets/service_account.json"
          securityContext:
             runAsNonRoot: true
          volumeMounts:
          - name: secret-volume
            mountPath: /secrets/
            readOnly: true
      volumes:
        - name: secret-volume
          secret:
            secretName: sa-secret
