part3/3.02/pingpongapp_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
  namespace: project
spec:
  type: NodePort
  selector:
    app: pingpongapp
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpongapp-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpongapp
  template:
    metadata:
      labels:
        app: pingpongapp
    spec:
      containers:
        - name: pingpongapp
          image: markokoskinen2019/dwk-second_app:v21
